# PGPEM-Mission-Control-v0.1.0

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
config/: settings.yaml
data/: dilr_topics.csv  quant_topics.csv  verbal_topics.csv
docs/: Architecture.md  PRD.md  Roadmap.md  Sprint0.md
mission_control/: __init__.py  __main__.py  main.py
mission_control/analytics/: __init__.py
mission_control/analytics/models/: __init__.py  learning_velocity.py  readiness_score.py  recommendation.py  report.py  study_statistics.py  weak_topic.py
mission_control/analytics/services/: __init__.py  analytics_service.py  readiness_service.py  recommendation_service.py  velocity_service.py
mission_control/analytics/workbook/: __init__.py  analytics_sheet.py
mission_control/application/: __init__.py  application.py  context.py
mission_control/common/config/: __init__.py  repository.py
mission_control/common/exceptions/: __init__.py
mission_control/core/: __init__.py  config.py  constants.py  exceptions.py  logger.py  theme.py  workbook_engine.py
mission_control/planner/: __init__.py  calendar.py  models.py  planner_generator.py  scheduler.py  topic_allocator.py
mission_control/renderers/: __init__.py  base.py
mission_control/workbook/: __init__.py  base_sheet.py  builder.py  dashboard.py  sheets.py  styles.py  table_sheet.py
src/: main.py
tests/: test_architecture_services.py  test_revision_engine.py  test_study_intelligence.py  test_workbook_generation.py
(+35 files in other folders)
